Some changes and add README

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "recipes",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "description": "",
   "dependencies": {
     "@react-pdf/renderer": "^3.1.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "mongodb": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
@@ -20,9 +20,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "symlink-dir ../../../backend src/backend"
+    "eject": "react-scripts eject"
   },
+  "keywords": [],
+  "author": "joelvaz0x01",
+  "license": "Apache-2.0",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -40,8 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "symlink-dir": "^5.1.1"
   }
 }
